--- a/engines/attendance/app/views/attendance/chats/index.html.haml
+++ b/engines/attendance/app/views/attendance/chats/index.html.haml
@@ -19,7 +19,10 @@
             %tr
               %td
                 %h4.ui.image.header
-                  %i.small.chat.icon.gray
+                  - if chat.chat_comments.where(candidate_read: false, candidate: false).present?
+                    %i.small.talk.icon.gray
+                  - else
+                    %i.small.talk.outline.icon.gray
                   .content
                     %a{href: "#{chat_path(chat)}"}
                       #{chat.chat_category.name rescue nil}
