--- a/engines/candidate/app/views/candidate/cadastres/pontuation.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/pontuation.html.haml
@@ -1,6 +1,6 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#{candidate.cadastre_path(1)}"}
+    %a{href: "#{candidate.cadastre_path(current_cadastre.id)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header
@@ -8,57 +8,64 @@
 .big.divider
 .ui.container
   - if @pontuations.present?
-    %table.ui.celled.table
-      - @pontuations.each do |pontuation|
-        %thead
-          %tr
-            %th
-              = pontuation.created_at.strftime('%d/%m/%Y') rescue nil
-        %tbody
-          %tr
-            %td
-              %h4.ui.image.header
-                .content
-                  .sub.header
-                    Total de Pontos
-                  = pontuation.total
-          %tr
-            %td
-              %h4.ui.image.header
-                .content
-                  .sub.header
-                    Tempo de Brasília
-                  = pontuation.bsb
-          %tr
-            %td
-              %h4.ui.image.header
-                .content
-                  .sub.header
-                    Tempo de Lista
-                  = pontuation.timelist
-          %tr
-            %td
-              %h4.ui.image.header
-                .content
-                  .sub.header
-                    Dependentes
-                  = pontuation.dependent
-          %tr
-            %td
-              %h4.ui.image.header
-                .content
-                  .sub.header
-                    Renda
-                  = pontuation.income
-          %tr
-            %td
-              %h4.ui.image.header
-                .content
-                  .sub.header
-                    Membro Especial
-                  = pontuation.special_condition
+    - @pontuations.each do |pontuation|
+      .ui.styled.accordion
+        .title
+          %i.dropdown.icon
+          = "Pontuação em: #{pontuation.created_at.strftime('%d/%m/%Y') rescue nil}"
+        .content
+          %table.ui.celled
+            %tbody
+              %tr
+                %td
+                  %h4.ui.image.header
+                    .content
+                      .sub.header
+                        Total de Pontos
+                      = pontuation.total
+              %tr
+                %td
+                  %h4.ui.image.header
+                    .content
+                      .sub.header
+                        Tempo de Brasília
+                      = pontuation.bsb
+              %tr
+                %td
+                  %h4.ui.image.header
+                    .content
+                      .sub.header
+                        Tempo de Lista
+                      = pontuation.timelist
+              %tr
+                %td
+                  %h4.ui.image.header
+                    .content
+                      .sub.header
+                        Dependentes
+                      = pontuation.dependent
+              %tr
+                %td
+                  %h4.ui.image.header
+                    .content
+                      .sub.header
+                        Renda
+                      = pontuation.income
+              %tr
+                %td
+                  %h4.ui.image.header
+                    .content
+                      .sub.header
+                        Membro Especial
+                      = pontuation.special_condition
   - else
-    %tbody
-      %tr
-        %td
-          %i Candidato sem pontuação
+    .column
+      .ui.segment
+        %i Candidato sem pontuação
+:javascript
+  $('.accordion')
+    .accordion({
+      selector: {
+        trigger: '.title .icon'
+      }
+    });
