--- a/engines/attendance/app/views/attendance/recadastre/documents/new.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/documents/new.html.haml
@@ -1,6 +1,6 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#{recadastre_tickets_path(@ticket)}"}
+    %a{href: "#"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header Envio de Documentação
