--- a/engines/attendance/app/views/attendance/recadastre/incomes/_disable_form.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/incomes/_disable_form.html.haml
@@ -7,12 +7,6 @@
   .big-divider
   .column.text-center
     - if @ticket.allow_recadastre_income?
-      = link_to "Meus dados estão corretos",confirm_recadastre_ticket_incomes_path(@ticket), class: 'ui button green fluid', data: { disabled_with: t(:disabled_with)}
+      = link_to "Meus dados estão corretos", recadastre_ticket_context_income_confirm_path(@ticket, @context, @cadastre_mirror), class: 'ui button green fluid', data: { disabled_with: t(:disabled_with)}
       .divider
-      = link_to "Atualizar Meus Dados", edit_recadastre_ticket_income_path(ticket_id: @ticket, id: @ticket.cadastre_mirror_id), class: 'ui button yellow fluid'
-    - else
-      .big-divider
-      %i.icon.checkmark.huge.green
-      .divider
-      .text-center
-        %h3 Os dados básicos do cadastro já foram confirmados.
+      = link_to "Atualizar Meus Dados", edit_recadastre_ticket_context_cadastre_path(@ticket, @context, @cadastre_mirror), class: 'ui button yellow fluid'
