--- a/engines/attendance/app/views/attendance/recadastre/cadastres/_disable_form.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/cadastres/_disable_form.html.haml
@@ -1,12 +1,12 @@
-= simple_form_for @ticket.cadastre_mirror, url: "#" do |f|
+= simple_form_for @cadastre_mirror, url: "#", remote: true, validate: true do |f|
   = f.input :name, input_html: { disabled: true }
   = f.input :cpf, input_html: { class: 'cpf', disabled: true }
-  = f.input :gender, as: :select, include_blank: 'false', collection: {}, input_html: { disabled: true }
+  = f.input :gender, as: :select, include_blank: 'false', collection: Core::Candidate::Cadastre.genders.keys, input_html: { disabled: true }
   = f.input :born, as: :string, input_html: { class: 'date', value: f.object.born.present? ? localize(f.object.born) : nil, disabled: true}
-  = f.input :born_uf, as: :select, include_blank: false, collection: {}, label_method: :acronym, value_method: :acronym, input_html: { disabled: true }
+  = f.input :born_uf, as: :select, include_blank: false, collection: Core::Address::State.all.order(:acronym), label_method: :acronym, value_method: :acronym, input_html: { disabled: true }
   = f.input :rg, input_html: { disabled: true }
   = f.input :rg_org, input_html: { disabled: true }
-  = f.input :rg_uf, as: :select, include_blank: false, collection: {}, label_method: :acronym, value_method: :acronym, input_html: {disabled: true}
+  = f.input :rg_uf, as: :select, include_blank: false, collection: Core::Address::State.all.order(:acronym), label_method: :acronym, value_method: :acronym, input_html: { disabled: true }
   = f.input :place_birth, input_html: { disabled: true }
   = f.input :mother_name, input_html: { disabled: true }
   = f.association :special_condition, as: :select, include_blank: false, input_html: { disabled: true }
@@ -17,13 +17,7 @@
   
   .big-divider
   .column.text-center
-    - if @ticket.allow_recadastre_cadastre?
-      = link_to "Meus dados estão corretos",confirm_recadastre_ticket_cadastres_path(@ticket), class: 'ui button green fluid', data: { disabled_with: t(:disabled_with)}
+    - if @context.aberto?
+      = link_to "Meus dados estão corretos", recadastre_ticket_context_cadastre_confirm_path(@ticket, @context, @cadastre_mirror), class: 'ui button green fluid'
       .divider
-      = link_to "Atualizar Meus Dados", edit_recadastre_ticket_cadastre_path(ticket_id: @ticket, id: @ticket.cadastre_mirror_id), class: 'ui button yellow fluid'
-    - else
-      .big-divider
-      %i.icon.checkmark.huge.green
-      .divider
-      .text-center
-        %h3 Os dados básicos do cadastro já foram confirmados.
+      = link_to "Atualizar Meus dados",  edit_recadastre_ticket_context_cadastre_path(@ticket, @context, @cadastre_mirror), class: 'ui button yellow fluid', data: { disabled_with: t(:disabled_with)}
