--- a/engines/attendance/app/views/attendance/recadastre/cadastres/show.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/cadastres/show.html.haml
@@ -1,6 +1,6 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#{recadastre_tickets_path(@ticket)}"}
+    %a{href: "#{recadastre_ticket_contexts_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header Atualização de Dados
@@ -9,4 +9,14 @@
 .big-divider
 .ui.grid.container
   .column.content-form
+    - if @context.finalizado?
+      .text-center
+        %h3 Seus dados básicos estão confirmados.
+        %i.ui.icon.green.check.huge
+        .big-divider
+    - if @context.finalizado_pendente_análise?
+      .text-center
+        %h3 Seus dados foram atualizados com sucesso!
+        %i.ui.icon.green.check.huge
+        .big-divider
     = render 'disable_form'
