--- a/engines/attendance/app/views/attendance/recadastre/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/documents/_form.html.haml
@@ -1,13 +1,17 @@
-= simple_form_for @ticket, url:recadastre_ticket_documents_path(@ticket), method: :post, multipart: true, html: {id: 'file-validation'} do |f|
- 
-  .column 
-    %label 
-      %b Certidão de Nascimento ou de Casamento, quando for o caso (nos casos de convivência marital trazes as certidões de nascimento de ambos)
-  .divider
-  .column 
-    = f.fields_for :rg_uploads do |builder|
-      = render 'rg_upload_fields', f: builder
-    = link_to_add_fields "Adicionar arquivo", f, :rg_uploads
-  %hr/
+= simple_form_for @context, url: recadastre_ticket_context_documents_path(@ticket, @context), method: :post do |f|
 
-  = f.submit "Enviar documentação", class: 'ui fluid green button'
+  - if @context.rg_uploads.any?
+    .column 
+      %label 
+        %b Comprovante de Identidade
+    .divider
+    .column 
+      = f.fields_for :rg_uploads do |builder|
+        = render 'upload_fields', f: builder
+      = link_to_add_upload_fields "Adicionar arquivo", f, :rg_uploads
+    %hr/
+  
+  .big-divider
+  - if @service.document_required_any?
+    = f.button :submit, "Enviar documentação", class: 'ui button green fluid disabled', data: { disable_with: "Enviando documentos, aguarde..."}
+
