--- a/engines/attendance/app/views/attendance/recadastre/documents/_upload_fields.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/documents/_upload_fields.html.haml
@@ -13,5 +13,5 @@
 
       = f.input :upload_path, as: :file, label: false, input_html: { onchange: 'validate_file(this);', class: 'inline'}
     = f.hidden_field :_destroy
-    = link_to "<i class='remove icon'></i>".html_safe, '#', class: "remove_fields ui button black icon mini inline"
+    = link_to "<i class='remove icon'></i>".html_safe, '#', class: "remove_fields ui button black icon mini inline #{f.object.disable_destroy.present? ?  'disabled' : ''}"
 .divider
