--- a/engines/attendance/app/views/attendance/recadastre/incomes/show.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/incomes/show.html.haml
@@ -1,12 +1,17 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#{recadastre_tickets_path(@ticket)}"}
+    %a{href: "#{recadastre_ticket_contexts_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
-    .title-header Atualização de Dados
-    .sub-title Verificação de Dados Básicos
+    .title-header Atualização de Renda
+    .sub-title Confirmação de Renda
 
 .big-divider
 .ui.grid.container
   .column.content-form
+    - if @context.finalizado?
+      .text-center
+        %h3 Seus dados de renda estão confirmados.
+        %i.ui.icon.green.check.huge
+        .big-divider
     = render 'disable_form'
